Simplify KNSTransaction creation

Have the action done within the transaction and delayed, to make sure
it happens well after adding it to the TransactionModel.

BUG: 390236